# shinra-attribute-extraction

./: .gitignore  Dockerfile  pyproject.toml
src/: .gitignore  dataset.py  extract_target.py  extract_target_total.py  model.py  predict.py  predict.sh  predict_qu.py  predict_speed copy.py  predict_test.sh  predict_traindata.sh  script_split_dataset.py  script_split_tohokubert_dataset.py  train.py  train.sh  train_AdamW_conti.sh  train_fp16.py  train_sam.sh  util.py
