[tool.poetry]
name = "shinra-attribute-extraction"
version = "0.1.0"
description = ""
authors = ["akiFQC <yakaredori@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
transformers = "^4.9.2"
numpy = "^1.21.1"
scikit-learn = "^0.24.2"
mlflow = "^1.19.0"
seqeval = "^1.2.2"
fugashi = "^1.1.1"
ipadic = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
